<resources>
    <string name="about_line1">Water Tracker is an application designed to utilize crowd-sourced data to improve mapping of fresh water across the globe.</string>
    <string name="about_line2">This app was developed by Robert Close, Matthew Thorne, Andrew Campbell, and Michael Gicking.</string>
    <string name="about_line3">Water Tracker was developed over the weekend of April 11-12, 2015 as part of the NASA Space Apps Challenge.</string>

    <string name="help_line1">Basic use instructions:</string>
    <string name="help_line2">Tap on the map to log a new observation.\nPress and hold to change map view settings.\nTap on a marker to view/edit details.\nTap the target button to zoom to location.\nMarker color key:\n\tRed: Wells\n\tGreen: Springs\n\tBlue: Streams, lakes, rivers, etc.\n\tYellow: Government Facility</string>
    <string name="help_line3">For additional information, please visit our page at www.rkclose.com/NASASpaceApps</string>
    <string name="help_line4">Additional questions or bug reports should be directed to salisburywatertracker@gmail.com</string>

    <string-array name="categoryOptions">
        <item>Stream or Lake</item>
        <item>Well</item>
        <item>Gov. Facility</item>
        <item>Spring</item>
    </string-array>
    <string-array name="waterUseOptions">
        <item>Drinking</item>
        <item>Agriculture</item>
        <item>Other</item>
    </string-array>

    <string name="app_name">Water Tracker</string>
    <string name="title_activity_water_track_map">Water Tracker</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="title_section1">Filter Map</string>
    <string name="title_section2">My Submissions</string>
    <string name="title_section3">Turn Tracking</string>
    <string name="title_section4">Help</string>
    <string name="title_section5">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="categoryLabel">Category:</string>
    <string name="waterUseLabel">Water use:</string>
    <string name="discoverLabel">Modified date:</string>
    <string name="category">Category Value</string>
    <string name="waterUse">Water Use Value</string>
    <string name="discover">Date Modified Value</string>
    <string name="sampleIdLabel">Sample ID:</string>
    <string name="sampleId">Sample ID value</string>
    <string name="sampleIdReturnMessage">Below is the sample ID for a water sample. WRITE THIS DATA DOWN. You will need it to update this observation upon completion of lab testing.</string>
</resources>
