<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TextView
        android:text="@string/categoryLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <TextView
        android:textStyle="bold"
        android:text="@string/category"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:text="@string/waterUseLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:textStyle="bold"
        android:text="@string/waterUse"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:text="@string/discoverLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:textStyle="bold"
        android:text="@string/discover"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>